package factorymethod;

public interface Logistics {
    Transport createTransport();
}
