package factorymethod;

public class Ship extends Transport {
}
