package factorymethod;

public abstract class Transport {
}
