package factorymethod;

public class Truck extends Transport {
}
